# tinyalsa

./: meson.build  meson_options.txt
doxygen/: Doxyfile.in  Makefile  meson.build
